# pyphoneme

./: README.md  pyproject.toml
.specstory/history/: 2025-03-11_22-52-codebase-inquiry-and-assistance.md
config/: config.yaml
data/b/: 4.mat  b_sound.mat
data/c/: 2.mat  c_sound.mat
data/ch/: 2.mat  ch_sound.mat
data/d/: 4.mat  d_sound.mat
data/f/: 2.mat  f_sound.mat
data/g/: 4.mat  g_sound.mat
data/h/: 1.mat  h_sound.mat
data/j/: 5.mat  j_sound.mat
data/k/: 5.mat  k_sound.mat
data/l/: 3.mat  l_sound.mat
data/m/: 2.mat  m_sound.mat
data/n/: 6.mat  n_sound.mat
data/p/: 6.mat  p_sound.mat
data/q/: 4.mat  q_sound.mat
data/r/: 2.mat  r_sound.mat
data/s/: 3.mat  s_sound.mat
data/sh/: 2.mat  sh_sound.mat
data/t/: 3.mat  t_sound.mat
data/w/: 6.mat  w_sound.mat
data/x/: 2.mat  x_sound.mat
data/y/: 1.mat  y_sound.mat
data/z/: 1.mat  z_sound.mat
data/zh/: 1.mat  zh_sound.mat
scripts/: copy_mat_files.py  create_directories.py  generate_mat_files.py
src/pywordmatch/: __init__.py  __main__.py  decoder.py  intro_screen.py  main_screen.py  question_generator.py  utils.py  welcome_screen.py
src/pywordmatch/components/: __init__.py  button.py
src/pywordmatch/screens/: __init__.py  intro.py  main.py  result.py  welcome.py
tests/: test_decoder.py  test_question_generator.py
