[project]
name = "pywordmatch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "李响", email = "lixiang@zjbci.com" }
]
dependencies = [
    "pygame>=2.6.1",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
    "matplotlib>=3.10.1",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"pywordmatch" = "pywordmatch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pywordmatch"]
